--- a/package.xml
+++ b/package.xml
@@ -38,6 +38,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <depend>octomap_ros</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
