Implement a message communication protocol between a trajectory sampler and the local planner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
 )
 
-add_service_files(
+add_message_files(
     FILES
-    MotionPrimitive.srv
+    MotionPrimitive.msg
 )
 
 generate_messages(
