Add octomap/EDT loading with C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(autopilot)
 
+# Path to the dynamicEDT3D package (included in the octomap module)
+# For some reason, catkin does not find it with the rest of the packages...
+set(dynamicEDT3D_DIR "/opt/ros/melodic/share/dynamicEDT3D/")
+
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
   octomap_ros
   message_generation
+  dynamicEDT3D
 )
 
 add_message_files(
@@ -31,6 +36,7 @@ catkin_package(
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  ${DYNAMICEDT3D_INCLUDE_DIRS}
 )
 
 # add_executable(octo_node src/octo_node.cpp)
@@ -39,4 +45,11 @@ include_directories(
 
 catkin_install_python(PROGRAMS global_planner.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+add_executable(local_planner src/local_planner.cpp)
+target_link_libraries(local_planner 
+    ${catkin_LIBRARIES}
+    ${OCTOMAP_LIBRARIES}
+    ${DYNAMICEDT3D_LIBRARIES}
 )
