Add an obstacle using a custom message and an internal octomap modification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
     FILES
     MotionPrimitive.msg
+    BoundingBox.msg
 )
 
 add_service_files(
